# simpleconfigfinder

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html
.github/workflows/: python-publish.yml  releasetests.yml
configfinder/: index.html
docs/: configfinder.md  index.md  testing.md
search/: search_index.json
src/configfinder/: __init__.py  configfinder.py
src/simpleconfigfinder/: __init__.py  configfinder.py  testing.py
testing/: index.html
tests/: test_configfinder.py  test_fixtures.py
