[project]
name = "configfinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[configuration]

sources = ["/src"]

[tool.configfinder.testconfig]
key = "value"

[tool.pytest.ini_options]
testpaths = [
    "tests",

]